k8s/lab5/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab5
  labels:
    app.kubernetes.io/part-of: lab5
