k8s/lab5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-webapp
  labels:
    app.kubernetes.io/name: dotnet-webapp
    app.kubernetes.io/part-of: lab5
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: dotnet-webapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dotnet-webapp
        app.kubernetes.io/part-of: lab5
    spec:
      containers:
        - name: dotnet-webapp
          image: ghcr.io/koudijs-dev/dotnet-webapp:sha-dde0c08
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
