k8s/lab5/valkey-seed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey-seed
  labels:
    app.kubernetes.io/name: cache
    app.kubernetes.io/part-of: lab5
spec:
  selector:
    app.kubernetes.io/instance: cache
  ports:
    - name: valkey
      port: 6379
      targetPort: 6379
