k8s/lab5/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dotnet-webapp
  labels:
    app.kubernetes.io/name: dotnet-webapp
    app.kubernetes.io/part-of: lab5
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lab5.k8s.koudijs.dev`)
      middlewares:
        - name: oidc
          namespace: oauth2-proxy
      services:
        - name: dotnet-webapp
          port: 80
  tls: {}
